# conan_version_conflict_test

./: .editorconfig  .gitignore  README.md  activate1.sh  activate2.sh  clean1.sh  clean2.sh  create_advanced1.sh  create_advanced2.sh  create_simple1.sh  create_simple2.sh
advanced/file_interface/: CMakeLists.txt  conanfile.py
advanced/file_interface/include/: file_interface.h
advanced/file_interface/src/: file_interface.cpp
advanced/file_interface/test_package/: CMakeLists.txt  conanfile.py
advanced/file_interface/test_package/src/: example.cpp
advanced/file_io_v41/: CMakeLists.txt  conanfile.py
advanced/file_io_v41/include/: file_io.h
advanced/file_io_v41/src/: file_io.cpp
advanced/file_io_v41/test_package/src/: example.cpp
advanced/file_io_v42/: CMakeLists.txt  conanfile.py
advanced/file_io_v42/src/: file_io.cpp
advanced/file_io_v42/test_package/: CMakeLists.txt  conanfile.py
advanced/file_mux/: CMakeLists.txt  conanfile.py
advanced/file_mux/include/: file_mux.h
advanced/file_mux/src/: file_mux.cpp
advanced/file_mux/test_package/: conanfile.py
advanced/file_mux_feat/: conanfile.py
advanced/file_mux_feat/src/: file_mux.cpp
advanced/file_mux_feat/test_package/: CMakeLists.txt
advanced/file_mux_feat/test_package/src/: example.cpp
advanced/file_types_v1/: conanfile.py
advanced/file_types_v1/include/: file_types.h
advanced/file_types_v1/src/: file_types.cpp
advanced/file_types_v1/test_package/: CMakeLists.txt  conanfile.py
advanced/file_types_v1/test_package/src/: example.cpp
advanced/file_types_v2/: CMakeLists.txt  conanfile.py
advanced/file_types_v2/include/: file_types.h
advanced/file_types_v2/src/: file_types.cpp
advanced/file_types_v2/test_package/src/: example.cpp
advanced/super/: CMakeLists.txt  conanfile.py
advanced/super/src/: super.cpp  super.h
simple/common_v1/: CMakeLists.txt  conanfile.py
simple/common_v1/include/: common.h
simple/common_v1/src/: common.cpp
simple/common_v1/test_package/: CMakeLists.txt
simple/common_v1/test_package/src/: example.cpp
simple/common_v2/: conanfile.py
simple/common_v2/include/: common.h
simple/common_v2/src/: common.cpp
simple/common_v2/test_package/: CMakeLists.txt  conanfile.py
simple/common_v2/test_package/src/: example.cpp
simple/direct/: CMakeLists.txt  conanfile.py
simple/direct/include/: direct.h
simple/direct/src/: direct.cpp
simple/direct/test_package/: CMakeLists.txt  conanfile.py
simple/direct/test_package/src/: example.cpp
simple/super/: CMakeLists.txt  conanfile.py
simple/super/src/: main.cpp  super.cpp
simple/super/test_package/: conanfile.py
